Automate Supabase setup and refresh guidelines

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ SUPABASE_URL=http://127.0.0.1:54321
 
 # Container-specific Supabase URL (used by docker-compose services)
 # When using Supabase CLI locally, the host exposes the API on 54321
-SUPABASE_URL_CONTAINER=http://host.docker.internal:54321
+SUPABASE_URL_CONTAINER=http://supabase_kong_supabase:8000
 
 # ⚠️ CRITICAL: You MUST use the SERVICE ROLE key, NOT the Anon key! ⚠️
 # 
@@ -94,3 +94,8 @@ OTEL_TRACES_SAMPLER=always_on
 OTEL_SERVICE_NAME_ARCHON_SERVER=archon-server
 OTEL_SERVICE_NAME_ARCHON_MCP=archon-mcp
 OTEL_SERVICE_NAME_ARCHON_AGENTS=archon-agents
+AGENTS_ENABLED=true
+ARCHON_SERVER_IMAGE=archon-archon-server:latest
+ARCHON_MCP_IMAGE=archon-archon-mcp:latest
+ARCHON_FRONTEND_IMAGE=archon-archon-frontend:latest
+ARCHON_AGENTS_IMAGE=archon-archon-agents:latest
