feat(migration): Implement hybrid search with tsvector support and multi-dimensional embeddings
- Added hybrid search functionality for archon_crawled_pages and archon_code_examples with tsvector support.
- Created functions for hybrid search that utilize both vector embeddings and text search.
- Introduced a priority column to archon_tasks with an enum type for task prioritization.
- Developed a backup script to create backups of essential tables before migration.
- Upgraded database schema to support multi-dimensional embeddings (384, 768, 1024, 1536, 3072) and model tracking fields.
- Migrated existing embedding data to new multi-dimensional columns and cleaned up legacy columns.
- Created optimized indexes for improved search performance and added validation scripts to ensure migration success.

--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ LOG_LEVEL=INFO
 
 # Service Ports Configuration
 # These ports are used for external access to the services
-HOST=172.29.227.9
+HOST=localhost
 ARCHON_SERVER_PORT=8181
 ARCHON_MCP_PORT=8051
 ARCHON_AGENTS_PORT=8052
@@ -44,7 +44,7 @@ ARCHON_DOCS_PORT=3838
 # VITE_ALLOWED_HOSTS: Comma-separated list of additional hosts allowed for Vite dev server
 # Example: VITE_ALLOWED_HOSTS=192.168.1.100,myhost.local,example.com
 # If not set, defaults to localhost, 127.0.0.1, ::1, and the HOST value above
-VITE_ALLOWED_HOSTS=172.29.227.9
+VITE_ALLOWED_HOSTS=172.29.227.9,localhost
 
 # Development Tools
 # VITE_SHOW_DEVTOOLS: Show TanStack Query DevTools (for developers only)
