--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ __pycache__/
 # Migration files (copied from archon-src at runtime)
 migration/*.sql
 migration/0.1.0/
+.env copy
+supabase/.temp/cli-latest
