feat(diagnostics): Add comprehensive diagnostic script for Archon system checks

--- a/.env
+++ b/.env
@@ -3,13 +3,13 @@
 
 # Get your SUPABASE_URL from the Data API section of your Supabase project settings -
 # https://supabase.com/dashboard/project/<your project ID>/settings/api
-SUPABASE_URL=http://127.0.0.1:54321
+# SUPABASE_URL=http://127.0.0.1:54321
 
 # Container-specific Supabase URL (used by docker-compose services)
 # When using Supabase CLI locally, the host exposes the API on 54321
 SUPABASE_URL_CONTAINER=http://supabase_kong_supabase:8000
 
-# ⚠️ CRITICAL: You MUST use the SERVICE ROLE key, NOT the Anon key! ⚠️
+# CRITICAL: You MUST use the SERVICE ROLE key, NOT the Anon key!
 # 
 # COMMON MISTAKE: Using the anon (public) key will cause ALL saves to fail with "permission denied"!
 #
@@ -18,8 +18,8 @@ SUPABASE_URL_CONTAINER=http://supabase_kong_supabase:8000
 # 2. In the Settings menu, click on "API keys" 
 # 3. Find "Project API keys" section
 # 4. You will see TWO keys - choose carefully:
-#    ❌ anon (public): WRONG - This is shorter, starts with "eyJhbGc..." and contains "anon" in the JWT
-#    ✅ service_role (secret): CORRECT - This is longer and contains "service_role" in the JWT
+#    anon (public): WRONG - This is shorter, starts with "eyJhbGc..." and contains "anon" in the JWT
+#    service_role (secret): CORRECT - This is longer and contains "service_role" in the JWT
 #
 # The service_role key is typically much longer than the anon key.
 # If you see errors like "Failed to save" or "Permission denied", you're using the wrong key!
