--- a/.env
+++ b/.env
@@ -99,3 +99,4 @@ ARCHON_SERVER_IMAGE=archon-archon-server:latest
 ARCHON_MCP_IMAGE=archon-archon-mcp:latest
 ARCHON_FRONTEND_IMAGE=archon-archon-frontend:latest
 ARCHON_AGENTS_IMAGE=archon-archon-agents:latest
+SUPABASE_URL=http://127.0.0.1:54321
